cmake_minimum_required(VERSION 3.29)
project(Cplusplus)

set(CMAKE_CXX_STANDARD 20)

add_executable(
  Cplusplus
  # nogamesc++/point.cpp
  # nogamesc++/dque.cpp
  # nogamesc++/graph.cpp
  # nogamesc++/singlylinklist.cpp
  # fulllearningcpp/initializer.cpp
  #fulllearningcpp/local.cpp
       # fulllearningcpp/signed.cpp
       # fulllearningcpp/bool.cpp
       # fulllearningcpp/typeconversion.cpp
       # fulllearningcpp/const.cpp
        #fulllearningcpp/numeralsystem.cpp
       # fulllearningcpp/string.cpp
      #  fulllearningcpp/objectval.cpp
        fulllearningcpp/vector.cpp
        fulllearningcpp/error.cpp
        #        fulllearningcpp/initializer.cpp
)
